6-gitea.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  serviceName: gitea
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: gitea
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
        selector:
          matchLabels:
            volume-name: gitea-data
  template:
    metadata:
      labels:
        app: gitea-web
    spec:
      nodeSelector:
        gitea: "true"
      containers:
        - name: gitea
          image: christhomas/gitea:latest
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
            - containerPort: 10022
              name: ssh
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data/git
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  selector:
    app: gitea-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: ssh
      port: 10022
      targetPort: 10022
