7-drone.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: drone
  namespace: gitea
  labels:
    app: drone
spec:
  serviceName: drone
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-web
    spec:
      containers:
        - name: drone
          image: drone/drone:latest
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: gitea
  labels:
    app: drone
spec:
  selector:
    app: drone-web
  ports:
    - name: http
      port: 80
      targetPort: 80
