9-ingress.yaml
# -- Ingress configuration for gitea
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2000m
spec:
  tls:
  - secretName: tls-gitea
    hosts:
      - "gitea.antimatter-studios.com"
      - "gitea-registry.antimatter-studios.com"
      - "gitea-drone.antimatter-studios.com"
  rules:
    - host: gitea.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: gitea
              servicePort: 80
    - host: gitea-drone.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: drone
              servicePort: 80
    - host: gitea-registry.antimatter-studios.com
      http:
        paths:
          - backend:
              serviceName: registry
              servicePort: 5000
